--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
         <swagger.input.directory>${project.basedir}/src/docs/swagger</swagger.input.directory>
         <asciidoctor.input.directory>${project.basedir}/src/docs/asciidoc</asciidoctor.input.directory>
         <generated.asciidoc.directory>${project.build.directory}/asciidoc</generated.asciidoc.directory>
-
+        <asciidoctor.html.output.directory>${project.build.directory}/asciidoc/html</asciidoctor.html.output.directory>
+        <asciidoctor.pdf.output.directory>${project.build.directory}/asciidoc/pdf</asciidoctor.pdf.output.directory>
     </properties>
 
     <build>
@@ -26,6 +27,7 @@
                     <inputDirectory>${swagger.input.directory}</inputDirectory>
                     <outputDirectory>${generated.asciidoc.directory}</outputDirectory>
                     <markupLanguage>ASCIIDOC</markupLanguage>
+                    <pathsGroupedBy>TAGS</pathsGroupedBy>
                 </configuration>
             </plugin>
 
@@ -50,7 +52,11 @@
                     <attributes>
                         <doctype>book</doctype>
                         <toc>left</toc>
-                        <toclevels>2</toclevels>
+                        <toclevels>3</toclevels>
+                        <numbered></numbered>
+                        <hardbreaks></hardbreaks>
+                        <sectlinks></sectlinks>
+                        <sectanchors></sectanchors>
                         <generated>${generated.asciidoc.directory}</generated>
                     </attributes>
                 </configuration>
@@ -65,6 +71,7 @@
                         </goals>
                         <configuration>
                             <backend>html5</backend>
+                            <outputDirectory>${asciidoctor.html.output.directory}</outputDirectory>
                         </configuration>
                     </execution>
                     <execution>
@@ -75,6 +82,7 @@
                         </goals>
                         <configuration>
                             <backend>pdf</backend>
+                            <outputDirectory>${asciidoctor.pdf.output.directory}</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
