--- a/pom.xml
+++ b/pom.xml
@@ -9,25 +9,43 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
-        <swagger.input.directory>${project.basedir}/src/docs/swagger</swagger.input.directory>
+        <swagger.input>${project.basedir}/src/docs/swagger/swagger_petstore.yaml</swagger.input>
         <asciidoctor.input.directory>${project.basedir}/src/docs/asciidoc</asciidoctor.input.directory>
         <generated.asciidoc.directory>${project.build.directory}/asciidoc</generated.asciidoc.directory>
         <asciidoctor.html.output.directory>${project.build.directory}/asciidoc/html</asciidoctor.html.output.directory>
         <asciidoctor.pdf.output.directory>${project.build.directory}/asciidoc/pdf</asciidoctor.pdf.output.directory>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jcenter-snapshots</id>
+            <name>jcenter</name>
+            <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>jcenter-releases</id>
+            <name>jcenter</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <!-- First, use the swagger2markup plugin to generate asciidoc -->
             <plugin>
-                <groupId>io.github.robwin</groupId>
+                <groupId>io.github.swagger2markup</groupId>
                 <artifactId>swagger2markup-maven-plugin</artifactId>
-                <version>0.9.3</version>
+                <version>1.0.0-SNAPSHOT</version>
                 <configuration>
-                    <inputDirectory>${swagger.input.directory}</inputDirectory>
-                    <outputDirectory>${generated.asciidoc.directory}</outputDirectory>
-                    <markupLanguage>ASCIIDOC</markupLanguage>
-                    <pathsGroupedBy>TAGS</pathsGroupedBy>
+                    <swaggerInput>${swagger.input}</swaggerInput>
+                    <outputDir>${generated.asciidoc.directory}</outputDir>
+                    <config>
+                        <swagger2markup.markupLanguage>ASCIIDOC</swagger2markup.markupLanguage>
+                        <swagger2markup.pathsGroupedBy>TAGS</swagger2markup.pathsGroupedBy>
+                    </config>
                 </configuration>
             </plugin>
 
