Added TravisCI script

--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,21 @@
         <asciidoctor.pdf.output.directory>${project.build.directory}/asciidoc/pdf</asciidoctor.pdf.output.directory>
     </properties>
 
-    <repositories>
-        <repository>
+    <pluginRepositories>
+        <pluginRepository>
             <id>jcenter-snapshots</id>
             <name>jcenter</name>
             <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
-        </repository>
-        <repository>
+        </pluginRepository>
+        <pluginRepository>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
             <id>jcenter-releases</id>
             <name>jcenter</name>
             <url>http://jcenter.bintray.com</url>
-        </repository>
-    </repositories>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
