--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 jdk:
 - oraclejdk8
-script: mvn swagger2markup:convertSwagger2markup
+script: mvn swagger2markup:convertSwagger2markup process-resources
