fire swagger2markup plugin during generate-sources

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
                         <swagger2markup.extensions.dynamicSecurity.contentPath>${project.basedir}src/docs/asciidoc/extensions/security/</swagger2markup.extensions.dynamicSecurity.contentPath>
                     </config>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>convertSwagger2markup</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- Run the generated asciidoc through Asciidoctor to generate
